DEMO-GoT-Scaling/5-deploy-application/gotmining-backend/gpt2gotmodel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gpt2gotmodel
    app.kubernetes.io/part-of: gotmining
  name: gpt2gotmodel
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gpt2gotmodel
  template:
    metadata:
      labels:
        app: gpt2gotmodel
    spec:
      # nodeSelector:
        # gpu: true
      containers:
        - image: quay.io/mdargatz/gotmininggpt2:small
          name: gotmining-backend
          ports:
            - containerPort: 8080
          # resources:
          #   limits:
          #     nvidia.com/gpu: 1
      restartPolicy: Always
